# modula-diff-geo

./: .buildinfo  .gitignore  README.md  download_datasets.py  index.html  objects.inv  pyproject.toml  requirements.txt  run_benchmarks.py  run_fisher_benchmarks.py  run_learned_benchmarks.py  run_transformer_benchmarks.py  searchindex.js
.doctrees/: environment.pickle
.doctrees/algorithms/manifold/: index.doctree  orthogonal.doctree  stiefel.doctree
.doctrees/examples/: hello-gpt.doctree  hello-mnist.doctree  hello-world.doctree  weight-erasure.doctree
.github/workflows/: tests.yml
algorithms/manifold/: index.html
algorithms/manifold/hypersphere/: index.html
algorithms/manifold/orthogonal/: index.html
algorithms/manifold/stiefel/: index.html
algorithms/newton-schulz/: index.html
bad-scaling/: index.html
benchmarks/: README.md
data/: .gitignore  __init__.py  download.py  loaders.py
diffgeo/: __init__.py  atoms.py  cli.py  divergence.py  information.py  metric.py
diffgeo/core/: __init__.py
diffgeo/geometry/: __init__.py  finsler.py  lie_groups.py  manifolds.py  metric.py
diffgeo/information/: __init__.py  divergence.py  extractor.py  fisher.py  manifolds.py
diffgeo/nn/: __init__.py  atoms.py  bonds.py  module.py  transformer.py
diffgeo/optim/: __init__.py  optimizer.py
diffgeo/viz/: __init__.py  core.py  finsler_viz.py  interactive.py  spd_viz.py
docs/: GETTING_STARTED.md  PHASE5_PLAN.md  SESSION_20260108_FISHER_GEOMETRY.md  manifold_integrity_score.md
examples/: diffgeo-tutorial.ipynb  manifold-visualizer-demo.ipynb
examples/hello-gpt/: index.html
examples/hello-mnist/: index.html
examples/hello-world/: index.html
examples/weight-erasure/: index.html
faq/: index.html
genindex/: index.html
geometric/: __init__.py  bonds.py  core.py  module.py  spd.py
golden-rules/: index.html
history/: index.html
intro/quickstart/: index.html
intro/reading-list/: index.html
intro/whats-in-a-norm/: index.html
modula/: abstract.py  atom.py
results/json/: 20260108_054322_physionet_eeg_learned_benchmark.json  20260108_055934_physionet_eeg_learned_benchmark.json  20260108_061210_physionet_eeg_learned_benchmark.json  20260108_061258_physionet_eeg_learned_benchmark.json  20260108_061501_physionet_eeg_learned_benchmark.json  20260108_092512_cmu_mocap_multi_benchmark.json  20260108_094841_physionet_eeg_multi_benchmark.json  20260108_102002_ghcn_daily_multi_benchmark.json  20260108_102406_cmu_mocap_multi_benchmark.json  20260108_115840_cmu_mocap_multi_benchmark.json
search/: index.html
tests/: __init__.py  conftest.py  test_geometric_atoms.py  test_geometric_transformer.py  test_modula.py  test_phase1_types.py  test_phase2_dualization.py  test_phase3_atoms.py  test_phase4_composition.py  test_phase5_information_geometry.py
tests/geometry/: __init__.py  generators.py  invariants.py
tests/integration/: __init__.py  test_geometry_pipeline.py
tests/realworld/: __init__.py  conftest.py  test_h1_spd_classification.py  test_h2_directed_graphs.py  test_h3_chirality.py  test_h4_affine_invariance.py  test_h5_missing_data.py  test_integration.py  test_utilities.py
tests/realworld/benchmarks/: __init__.py  imputation.py  learnable.py  learned_viz.py  manifold_integrity.py  runner.py  visualization.py
tests/realworld/utils/: __init__.py  datasets.py  masking.py  metrics.py
tests/unit/: test_finsler.py  test_fisher.py  test_lie_groups.py  test_statistical_manifold.py
theory/atom/: index.html
theory/atom/conv2d/: index.html
theory/atom/embed/: index.html
theory/bond/: index.html
theory/compound/: index.html
theory/module/: index.html
theory/vector/: index.html
(+3 files in other folders)
