[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modula"
version = "0.0.0.0.0.2"
authors = [
    { name="Jeremy Bernstein", email="jbernstein@mit.edu" },
]
description = "Numerically sound neural network library."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.6.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
]
dev = [
    "modula[test]",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["modula", "diffgeo"]

[project.scripts]
diffgeo = "diffgeo.cli:main"

[project.urls]
"Homepage" = "https://modula.systems/"
"Repository" = "https://github.com/modula-systems/modula"
"Bug Tracker" = "https://github.com/modula-systems/modula/issues"
"Documentation" = "https://docs.modula.systems/"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "phase1: core type system tests",
    "phase2: dualization tests",
    "phase3: atomic primitive tests",
    "phase4: composition tests",
    "phase5: information geometry tests",
    "invariant: mathematical invariant verification",
    "hypothesis: real-world hypothesis tests (SPD, Finsler, Chirality, Missing Data)",
    "geometric_transformer: geometric transformer architecture tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:GeometricLinear provides no geometric dualization:UserWarning",
]

[tool.coverage.run]
source = ["diffgeo", "modula"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
